fixed gap in navbar almost flat and gradient theme cleanup navbar almost flat and gradient theme

--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -290,7 +290,8 @@
     text-align: center;
     /* 1 */
     max-width: 50%; 
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
