--- a/themes/default/almost-flat/navbar.less
+++ b/themes/default/almost-flat/navbar.less
@@ -12,7 +12,8 @@
 @navbar-link-color:                             @global-link-color;
 @navbar-link-hover-color:                       @global-link-hover-color;
 
-@navbar-nav-line-height:                        @navbar-nav-height;
+@navbar-nav-height:                             41px;
+@navbar-nav-line-height:                        @navbar-nav-height - 1;
 @navbar-nav-color:                              @global-color;
 @navbar-nav-font-size:                          @global-font-size;
 @navbar-nav-hover-background:                   @global-default-hover-background;
@@ -47,6 +48,7 @@
 
 .hook-navbar() {
     border: 1px solid @navbar-border;
+    border-radius: @global-border-radius;
 }
 
 
@@ -56,13 +58,11 @@
 //
 // 1. Overlap top border
 // 2. Collapse horizontal borders
-// 3. Adjust height because of 1. and `box-sizing` set to `border-box`
 //
 
 .hook-navbar-nav() {
-    margin-top: -1px; // 1 */
-    margin-left: -1px; // 2 */
-    height: @navbar-nav-height + 1; // 3 */
+    margin-top: -1px; // 1
+    margin-left: -1px; // 2
     border: 1px solid transparent;
     border-bottom-width: 0;
     text-shadow: 0 1px 0 @navbar-text-shadow;
@@ -101,7 +101,14 @@
 // Sub-object: `uk-navbar-content`
 // ========================================================================
 
-.hook-navbar-content() { text-shadow: 0 1px 0 @navbar-text-shadow; }
+//
+// 1. Behave like items
+//
+
+.hook-navbar-content() {
+    margin-top: -1px; // 1
+    text-shadow: 0 1px 0 @navbar-text-shadow;
+}
 
 
 // Miscellaneous
@@ -109,13 +116,11 @@
 
 .hook-navbar-misc() {
 
-    .uk-navbar:not(.uk-navbar-attached) { border-radius: @global-border-radius; }
-
     /*
      * Apply same `border-radius` as `uk-navbar`
      */
 
-    .uk-navbar:not(.uk-navbar-attached) .uk-navbar-nav:first-child > li:first-child > a {
+    .uk-navbar-nav:first-child > li:first-child > a {
         border-top-left-radius: @global-border-radius;
         border-bottom-left-radius: @global-border-radius;
     }
@@ -125,20 +130,33 @@
      */
 
     /* Collapse border */
-    .uk-navbar .uk-navbar-flip .uk-navbar-nav > li > a {
+    .uk-navbar-flip .uk-navbar-nav > li > a {
         margin-left: 0;
         margin-right: -1px;
     }
 
     /* Apply same `border-radius` as `uk-navbar` */
-    .uk-navbar .uk-navbar-flip .uk-navbar-nav:first-child > li:first-child > a {
+    .uk-navbar-flip .uk-navbar-nav:first-child > li:first-child > a {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
     }
 
-    .uk-navbar:not(.uk-navbar-attached) .uk-navbar-flip .uk-navbar-nav:last-child > li:last-child > a {
+    .uk-navbar-flip .uk-navbar-nav:last-child > li:last-child > a {
         border-top-right-radius: @global-border-radius;
         border-bottom-right-radius: @global-border-radius;
     }
+
+    /*
+     * Sub-modifier `uk-navbar-attached`
+     */
+
+    .uk-navbar-attached {
+        border-top-color: transparent;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        border-radius: 0;
+    }
+
+    .uk-navbar-attached .uk-navbar-nav > li > a { border-radius: 0 !important; }
 
 }
