--- a/themes/default/gradient/navbar.less
+++ b/themes/default/gradient/navbar.less
@@ -12,7 +12,8 @@
 @navbar-link-color:                             @global-link-color;
 @navbar-link-hover-color:                       @global-link-hover-color;
 
-@navbar-nav-line-height:                        @navbar-nav-height;
+@navbar-nav-height:                             41px;
+@navbar-nav-line-height:                        @navbar-nav-height - 1;
 @navbar-nav-color:                              @global-color;
 @navbar-nav-font-size:                          @global-font-size;
 @navbar-nav-hover-background:                   transparent;
@@ -58,7 +59,8 @@
 .hook-navbar() {
     border: 1px solid @navbar-border;
     border-bottom-color: @navbar-border-bottom;
-    background-origin: border-box; // 1 */
+    border-radius: @global-border-radius;
+    background-origin: border-box; // 1
     background-image: -webkit-linear-gradient(top, @navbar-gradient-top, @navbar-gradient-bottom);
     background-image: linear-gradient(to bottom, @navbar-gradient-top, @navbar-gradient-bottom);
 }
@@ -70,28 +72,26 @@
 //
 // 1. Overlap top border
 // 2. Collapse horizontal borders
-// 3. Adjust height because of 1. and `box-sizing` set to `border-box`
 //
 
 .hook-navbar-nav() {
     margin-top: -1px; // 1
     margin-left: -1px; // 2
-    height: @navbar-nav-height + 1; // 3
     border: 1px solid transparent;
     border-bottom-width: 0;
     text-shadow: 0 1px 0 @navbar-text-shadow;
 }
 
-/*
- * Needed for hover
- * 1. Create position context to superimpose the successor elements border
- * 2. Needed because the `li` elements have already a position context
- */
+//
+// Needed for hover
+// 1. Create position context to superimpose the successor elements border
+// 2. Needed because the `li` elements have already a position context
+//
 
 // Hover
 .hook-navbar-nav-hover() {
-    position: relative; // 1 */
-    z-index: 1; // 2 */
+    position: relative; // 1
+    z-index: 1; // 2
     border-left-color: @navbar-nav-hover-border;
     border-right-color: @navbar-nav-hover-border;
     border-top-color: @navbar-nav-hover-border-top;
@@ -118,7 +118,14 @@
 // Sub-object: `uk-navbar-content`
 // ========================================================================
 
-.hook-navbar-content() { text-shadow: 0 1px 0 @navbar-text-shadow; }
+//
+// 1. Behave like items
+//
+
+.hook-navbar-content() {
+    margin-top: -1px; // 1
+    text-shadow: 0 1px 0 @navbar-text-shadow;
+}
 
 
 // Miscellaneous
@@ -126,13 +133,11 @@
 
 .hook-navbar-misc() {
 
-    .uk-navbar:not(.uk-navbar-attached) { border-radius: @global-border-radius; }
-
     /*
      * Apply same `border-radius` as `uk-navbar`
      */
 
-    .uk-navbar:not(.uk-navbar-attached) .uk-navbar-nav:first-child > li:first-child > a {
+    .uk-navbar-nav:first-child > li:first-child > a {
         border-top-left-radius: @global-border-radius;
         border-bottom-left-radius: @global-border-radius;
     }
@@ -141,21 +146,34 @@
      * Sub-modifier `uk-navbar-flip`
      */
 
-    // Collapse border */
-    .uk-navbar .uk-navbar-flip .uk-navbar-nav > li > a {
+    /* Collapse border */
+    .uk-navbar-flip .uk-navbar-nav > li > a {
         margin-left: 0;
         margin-right: -1px;
     }
 
-    // Apply same `border-radius` as `uk-navbar` */
-    .uk-navbar .uk-navbar-flip .uk-navbar-nav:first-child > li:first-child > a {
+    /* Apply same `border-radius` as `uk-navbar` */
+    .uk-navbar-flip .uk-navbar-nav:first-child > li:first-child > a {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
     }
 
-    .uk-navbar:not(.uk-navbar-attached) .uk-navbar-flip .uk-navbar-nav:last-child > li:last-child > a {
+    .uk-navbar-flip .uk-navbar-nav:last-child > li:last-child > a {
         border-top-right-radius: @global-border-radius;
         border-bottom-right-radius: @global-border-radius;
     }
+
+    /*
+     * Sub-modifier `uk-navbar-attached`
+     */
+
+    .uk-navbar-attached {
+        border-top-color: transparent;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        border-radius: 0;
+    }
+
+    .uk-navbar-attached .uk-navbar-nav > li > a { border-radius: 0 !important; }
 
 }
